2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Add include of unistd.h to make Solaris happy

2010-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.6

	* debian/*: Similarly updated for new release to Debian

2010-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Also include typeinfo header file

2010-09-08  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h : added class_Base::property_names method
	to grab the names of all fields (properties)

	* src/Module.cpp : added R access (.Call) function CppClass__properties
	to grab the names of the fields (property) from the XP of a class

	* inst/include/Rcpp/Module.h : added class_Base::property_is_readonly method
	to query if a property is read only

	* src/Module.cpp : added R access (.Call) function CppClass__property_is_readonly
	to query if a class property is read only

	* inst/include/Rcpp/Module.h : added class_Base::property_class method
	to grab the C++ class of a property

	* src/Module.cpp : added R access (.Call) function CppClass__property_class
	to grab the C++ class of a property

2010-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/ConvolveBenchmarks/exampleRCode.r: Rewritten /
	simplified using the rbenchmark::benchmark() function

 	* DESCRIPTION: Added Suggests: on rbenchmark package

2010-09-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/ConvolveBenchmarks/exampleRCode.r: Some cosmetics

	* inst/examples/ConvolveBenchmarks/convolve3_cpp.cpp: Remove one
	unneccessary loop to set values to zero (which the ctor does for us)

2010-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-extending/Rcpp-extending.Rnw: Add highlight definitions
	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Idem
	* inst/doc/Rcpp-package/Rcpp-package.Rnw: Idem

2010-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/msvcmath.cpp: Undo unmotivated msvc patch
	* inst/include/Rcpp/msvc/: Idem