@@ -1,6 +1,6 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
-Version: 0.8.6.1
+Version: 0.8.6.2
 Date: $Date$
 Author: Dirk Eddelbuettel and Romain Francois, with contributions 
  by Simon Urbanek, David Reiss and Douglas Bates; based on code written during 
@@ -34,9 +34,9 @@ Description: The Rcpp package provides a C++ library which facilitates the
  Several examples are included, and 773 unit tests in 366 unit test functions
  provide additional usage examples.
 Depends: R (>= 2.12.0), methods
-Suggests: RUnit, inline, highlight, rbenchmark
+Suggests: RUnit, inline, rbenchmark
 URL: http://dirk.eddelbuettel.com/code/rcpp.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/Rcpp
 License: GPL (>= 2)
 BugReports: http://r-forge.r-project.org/tracker/?atid=637&group_id=155&func=browse
 MailingList: Please send questions and comments regarding Rcpp to rcpp-devel@lists.r-forge.r-project.org
-
+MinimumSvnRev: 52905
