@@ -17,5 +17,10 @@
 
 .onLoad <- function(libname, pkgname){
 	install_help_workaround()
+	
+	minimum_svn_rev <- as.integer( packageDescription( pkgname )[["MinimumSvnRev"]] )
+	if( minimum_svn_rev < R.version[["svn rev"]] ){
+		packageStartupMessage("R version too old for full use of reference methods" )
+	}
 }
 
